<resources>

    <string name="app_name">T0011_FirstScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Global Ads</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_offers">OffersActivity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="account">Account</string>
    <string name="business">Business</string>
    <string name="type">Type</string>
    <string name="global_ads">Global Ads</string>
    <string name="accept">Accept</string>
    <string name="image">Image</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_offer">Enter Offer</string>
    <string name="enter_type">Enter Type</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_rate">Enter Rate</string>

</resources>