<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/content_green_gradient">

    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:background="#7d9e39"
	    >
	    <Button
	        android:id="@+id/btnAccount"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1" 
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="1dp"		    	
		    android:background="@drawable/offerscreen_button_shape_selector"       
            android:textColor="#FFFFFF"	    
		    android:text="@string/account"
		    />
	    <Button
	        android:id="@+id/btnBusiness"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1" 
		    android:background="@drawable/offerscreen_button_shape_selector"             
            android:textColor="#FFFFFF"
			android:text="@string/business"		    		    
		    />
	    <Button
	        android:id="@+id/btnType"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"		    
		    android:layout_marginLeft="1dp"
		    android:layout_marginRight="5dp"    
		    android:background="@drawable/offerscreen_button_shape_selector"             
            android:textColor="#FFFFFF"		    
		    android:text="@string/type"
		    />
	</LinearLayout>
</LinearLayout>
