<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLoginParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical">
    
    <LinearLayout 
		android:id="@+id/layoutHeader"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"	    
	    android:orientation="vertical"
	    android:background="@drawable/header_gradient"
	    android:layout_weight="2"
	    >

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"	
            android:text="@string/global_ads"
            android:textColor="#e26c09"
            android:textSize="20sp"
            android:textStyle="bold" />

	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/layoutBottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"	    
	    android:orientation="vertical"
	    android:background="@drawable/content_green_gradient"
	    android:layout_weight="4">	    
	    <EditText
	        android:id="@+id/etLogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        	        
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_weight="1"
	        android:hint="@string/login"
	        android:singleLine="true"      
	        android:background="@drawable/text_selector"  
	        />
	        	   

	    <EditText
	        android:id="@+id/etPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	              
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_weight="1"
	        android:hint="@string/password"
	        android:singleLine="true"
	        android:background="@drawable/text_selector"
	        android:inputType="textPassword"	        
	         />

	    <CheckBox
	        android:id="@+id/chbShowPassword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_weight="1"
	        
	        android:text="Show Password" />

	    <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_weight="1"	
	        	        	        
	        android:background="@drawable/blue_button_shape_selector"             
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            	        
	        android:text="@string/login" />

	    <Button
	        android:id="@+id/btnSignUp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_weight="1"	
	        
	        android:background="@drawable/green_button_shape_selector"            
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            	        
	        android:text="@string/sign_up" />
	    
	</LinearLayout>
</LinearLayout>
